# mace

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml  setup.cfg
.github/: gpu-fleet.json
.github/actions/run-tests/: action.yml
.github/actions/setup-mace/: action.yml
.github/actions/smoke-release/: action.yml
.github/workflows/: ci-core.yaml  ci-extensions.yaml  ci-gpu.yaml  ci-integrations.yaml  nightly.yaml  release.yaml
docs/guide/: foundation_models.rst  guide.rst  polar_mace.rst  polarizability.rst
mace/: __version__.py
mace/calculators/: __init__.py  mace.py  mace_torchsim.py
mace/cli/: eval_configs.py  fine_tuning_select.py  plot_train.py  polar_density_cube.py  preprocess_data.py  run_train.py
mace/data/: atomic_data.py  augmentation.py  lmdb_dataset.py  utils.py
mace/modules/: __init__.py  blocks.py  extensions.py  loss.py  models.py  utils.py
mace/tools/: arg_parser.py  default_keys.py  distributed_tools.py  finetuning_utils.py  model_script_utils.py  multihead_tools.py  scripts_utils.py  train.py
requirements/: les.txt  polar.txt
scripts/: preprocess_data.py  run_checks.sh
tests/: .test_durations  conftest.py  helpers.py  test_lmdb_database.py
tests/backends/: backend_parity.py  test_cueq.py  test_oeq.py
tests/benchmarks/: test_benchmark.py
tests/extensions/les/: test_maceles.py
tests/extensions/magnetic/: test_magmace.py
tests/extensions/polar/: test_polar_cueq.py  test_polar_density_cube.py  test_polar_models.py
tests/extensions/schedulefree/: test_schedulefree.py
tests/extensions/torchsim/: test_torchsim.py
tests/foundations/: test_calculator_foundations.py  test_foundations.py  test_hessian.py
tests/integrations/: README.md
tests/integrations/lammps/: _harness.py  test_export.py  test_ghost_parity.py  test_lammps_real.py
tests/unit/: test_arg_parser.py  test_calculator_mdp.py  test_compile.py  test_data.py  test_data_utils.py  test_download_urls.py  test_finetuning_utils.py  test_loss.py  test_multihead_tools.py
tests/workflows/: test_calculator.py  test_distributed.py  test_embedding_train.py  test_finetuning_pseudolabels.py  test_freeze.py  test_mdp_finetune.py  test_multifiles.py  test_preprocess.py  test_run_train.py  test_run_train_allkeys.py  test_run_train_dipole_polar.py
